Fix responder caso no email cliente
Se debe poder enviar un email o hacer un comentario aunque el cliente
no tenga email.

--- a/src/main/webapp/script/caso/responder.xhtml
+++ b/src/main/webapp/script/caso/responder.xhtml
@@ -24,8 +24,7 @@
         </h:panelGroup>
 
         <p:panel id="message-details-reply" style="border: 0px; padding: 0px;"
-                 rendered="#{(casoController.replyMode) and ((casoController.verificarCrearActividad()) 
-                             and (casoController.verificarResponderCaso()))}">  
+                 rendered="#{(casoController.replyMode) and ((casoController.verificarCrearActividad()))}">  
 
             <h:panelGrid width="100%">
 
