Comenta parte de ayuda en contruccion

--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -361,7 +361,7 @@
                                             icon="fa fa-lock">
                                     <p:resetInput target="@form" />
                                 </p:menuitem>
-                                <!--Componente De Ayuda aun en construccion -->
+                                <!--Componente De Ayuda aun en construccion ->
                                 <f:facet name="options">
                                     <div align="right">
                                         <p:outputPanel style="position: absolute; top: 5px; right: 100px;">  
@@ -375,7 +375,7 @@
                                             <p:commandButton value="Hide" onclick="PF('bar').hide()" type="button" icon="ui-icon-arrow-1-n"/>
                                         </p:outputPanel>
                                     </div>
-                                </f:facet>
+                                </f:facet-->
                                 
                                 <f:facet name="options">
                                     <p:ajaxStatus style="position: absolute; top: 10px; right: 110px;">
