Se elimina metodo createPreentregaAndView
Estaba repetido y solo debe usarse createAndView

--- a/src/main/webapp/script/caso/Create_preentrega.xhtml
+++ b/src/main/webapp/script/caso/Create_preentrega.xhtml
@@ -276,7 +276,7 @@
                                 <f:facet name="footer" >
                                     <div class="ui-panel-titlebar ui-widget-header ui-helper-clearfix ui-corner-all">
                                         <div align="right" style="width: 100%;">
-                                            <p:commandButton action="#{casoController.createPreentregaAndView()}" value="#{bundle.CreateCasoSaveLink}" ajax="false" style="width: 200px;"/>
+                                            <p:commandButton action="#{casoController.createAndView()}" value="#{bundle.CreateCasoSaveLink}" ajax="false" style="width: 200px;"/>
                                         </div>
                                     </div>
                                 </f:facet>
