--- a/src/main/webapp/resources/go/filterView.xhtml
+++ b/src/main/webapp/resources/go/filterView.xhtml
@@ -26,7 +26,7 @@
 
         <composite:implementation>
             
-            <p:panel id="panelFilter"  styleClass="panelFilter" style="border: none !important;">
+            <p:panel id="panelFilter"  styleClass="panelFilter no-border-radius"  style="border: none !important;"  visible="#{cc.attrs.controllerMBean.filterViewToggle}">
 
                 <h:panelGrid columns="5" rendered="#{cc.attrs.showSearchBar}" style="padding: 0">
 
@@ -53,7 +53,7 @@
                 </h:panelGrid>
 
 
-                <p:panel id="filters"  visible="#{(cc.attrs.showSearchBar and cc.attrs.controllerMBean.filterViewToggle) or (not cc.attrs.showSearchBar)}" style="border: none !important;">
+                <p:panel id="filters"  style="border: none !important;">
 
                     <!--<p:fieldset legend="Filtros">-->
 
