saving work on multitenant

--- a/src/main/webapp/script/recentActivity.xhtml
+++ b/src/main/webapp/script/recentActivity.xhtml
@@ -21,7 +21,7 @@
                     <div class="panel-body">
 
                         <div class="comment">
-                            <img src="assets/demo/avatars/5.jpg" alt="" class="comment-avatar"/>
+                            <img src="" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
                                     <a href="#" title="">Denise Steiner</a> commented on <a href="#" title="">Article Name</a>
@@ -38,7 +38,7 @@
                         </div> <!-- / .comment -->
 
                         <div class="comment">
-                            <img src="assets/demo/avatars/3.jpg" alt="" class="comment-avatar"/>
+                            <img src="" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
                                     <a href="#" title="">Michelle Bortz</a> commented on <a href="#" title="">Article Name</a>
@@ -55,7 +55,7 @@
                         </div> <!-- / .comment -->
 
                         <div class="comment">
-                            <img src="assets/demo/avatars/2.jpg" alt="" class="comment-avatar"/>
+                            <img src="" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
                                     <a href="#" title="">Robert Jang</a> commented on <a href="#" title="">Article Name</a>
@@ -72,7 +72,7 @@
                         </div> <!-- / .comment -->
 
                         <div class="comment">
-                            <img src="assets/demo/avatars/4.jpg" alt="" class="comment-avatar"/>
+                            <img src="" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
                                     <a href="#" title="">Timothy Owens</a> commented on <a href="#" title="">Article Name</a>
