Se modifica link a clientes enviaba error antes
Se modifica link a clientes enviaba error antes

--- a/src/main/webapp/script/template_inbox_bootstrap.xhtml
+++ b/src/main/webapp/script/template_inbox_bootstrap.xhtml
@@ -354,7 +354,7 @@
 
                                     <li>
                                         <p:commandLink title="Clientes" 
-                                                       action="#{emailClienteController.prepareList()}" ajax="false">
+                                                       action="#{clienteController.prepareList}" ajax="false">
                                             <i class="menu-icon fa fa-users"></i>
                                             <span class="mm-text">Clientes</span>
                                         </p:commandLink>
